--- a/interview.html
+++ b/interview.html
@@ -16,7 +16,7 @@
                             <li><a href="contact.html">CONTACT</a></li>
                         </ul>
                     </li>
-                    <li><a class="active" href="interview.html">INTERVIEW</a></li>
+                    <li><a class="menu_active" href="interview.html">INTERVIEW</a></li>
                     <li><a href="exposition.html">EXPOSITION</a></li>
                 </ul>
             </nav>
@@ -24,51 +24,51 @@
         <section>
             <div class="interview">
                 <h1>Bonjour</h1>
-                <p class="introduction">Tout commence par l'énoncé de l’exercice. Faire une interview d’un(e) web développeur(se). Moi : comment faire ? Je connais personne .. </p>
+                <p class="introduction">Tout commence par l'énoncé de l’exercice. Faire une interview d’un(e) web développeur(se). Moi : comment faire ? Je connais personne ... </p>
                 <div class="survol">
                      <img class="button_survol" src="img/boutton_survol.png">
-                     <div class="suite_introduction"> Puis, “Google" est ton ami !”. Je m’empresse de taper “société web développeur” dans “Google” et contact par e-mail toutes les boîtes se trouvant à Bruxelles avec un titre bien accrocheur “J’ai besoin de vous !”. Le temps s’écoule, seulement deux boites me répondent parmi la vingtaine contactée, mais elles n’ont pas le temps. Et une boite me met dans ses spams, super ! C'était avec mon adresse personnelle que j’ai envoyé les e-mails. Bref .. En réfléchissant comment j’allais faire pour contacter directement un web développeur sans passer par la boite. Je me suis souvenu qu’il y avait un site de réseau social professionnel : LinkedIn ! Je refais le même processus que précédemment. Eurêka, ça marche. Plusieurs réponses négatives et positives. Pour ne pas perdre de temps, je leur propose rapidement de leur envoyer un e-mail avec les questions de l’interview pour qu’ils puissent prendre le temps d’y répondre. Le temps file encore, pas de réponse. J’avais laissé deux semaines de marge, j’attends. La date approche .. Entre temps, je demande à ma sœur si elle connaît quelqu’un : oui ! Je le contacte, il ne s’occupe que d’un seul site, mais ça fera l’affaire et c’est toujours intéressant. Je lui envoi l’interview et il me répond rapidement. Super ! Mais j’aimerais bien un peu plus .. La date butoir approche, je renvoie un e-mail aux personnes qui avait accepté l’interview précédemment et je reçois une réponse rapidement d’une personne qui est indépendante. Une autre personne me dit qu’elle n’a pas le temps et aurait préférée le faire par téléphone ou Skype. Intéressé par son profil, je m’arrange avec cette personne pour l’avoir au téléphone. L’interview eue lieu et se passa très bien de mon côté (un peu stressé quand même) et j’espère du sien aussi : j’ai oublié de demander .. J’ai mes trois interviews avec chacun un profil différent. Ouf !</div>
+                     <div class="suite_introduction">Puis, “Google" est ton ami ! Je m’empresse de taper “société web développeur” dans “Google” et contact par e-mail toutes les boîtes se trouvant à Bruxelles avec un titre bien accrocheur: “J’ai besoin de vous !”. Le temps s’écoule, seulement deux boites me répondent parmi la vingtaine contactée, mais elles n’ont pas le temps. Et une boite me met dans ses spams. Super, c'était avec mon adresse personnelle que j’ai envoyé les e-mails. Bref ... Réfléchissant comment j’allais faire pour contacter directement un web développeur sans passer par la boite, je me suis souvenu qu’il y avait un site de réseau social professionnel : LinkedIn ! Je refais le même processus que précédemment. Eurêka, ça marche. Plusieurs réponses négatives mais surtout des positives. Pour ne pas perdre de temps, je leur propose rapidement de leur envoyer un e-mail avec les questions de l’interview pour qu’ils puissent prendre le temps d’y répondre. Le temps file encore, pas de réponse. J’avais laissé deux semaines de marge, j’attends. La date approche ... Entre temps, je demande à ma sœur si elle connaît quelqu’un : oui ! Je le contacte, il ne s’occupe que d’un seul site, mais ça fera l’affaire et c’est toujours intéressant. Je lui envoie l’interview et il me répond rapidement. Super ! Mais j’aimerais bien un peu plus .. La date butoir approche, je renvoie un e-mail aux personnes qui avait accepté l’interview précédemment et je reçois une réponse rapidement d’une personne qui est indépendante. Une autre personne me dit qu’elle n’a pas le temps et aurait préféré le faire par téléphone ou Skype. Intéressé par son profil, je m’arrange avec cette personne pour l’avoir au téléphone. L’interview eut lieu et se passa très bien de mon côté (un peu stressé quand même) et j’espère du sien aussi : j’ai oublié de demander ... J’ai mes trois interviews avec chacun un profil différent. Ouf !</div>
                 </div> 
                 <div class="reponse">
                     <p class="contenu_1"></p>
                     <p class="contenu_2"></p>
                     <p class="contenu_3"></p>
                 </div>
-                <h2 class="question">Laissez moi vous les présenter :</h2>
+                <h2 class="question">Laissez-moi vous les présenter :</h2>
                 <div class="personne">
                     <div class="contenu_1"><img class=" typo_person" src="img/roxane.png"><h1>Roxane<br/> 33 ans</h1></div>
                     <div class="contenu_2"><img class=" typo_person" src="img/jean.png"><h1>Jean Luc<br /> 54 ans</h1></div>
                     <div class="contenu_3"><img class=" typo_person" src="img/edouard.png"><h1>Edouard<br /> 26 ans</h1></div>
-                    <!-- Pas trouver artiste de référence -->
+                    <!-- Pas trouver d'artiste de référence -->
                 </div>
                 <div class ="reponse">
-                    <p class="contenu_1">Web développeuse dans une agence de Pub “Shake” - Back-end / mise en ligne / serveur. Esprit start-up 10-15 personnes. Toute l'équipe au même niveau et 3 managers.</p>
-                    <p class="contenu_2">UX/UI Designer et web développeur freelance - Suivi de la clientèle en full-stack. Indépendant “solo”.</p>
-                    <p class="contenu_3">Technicien vidéo chez “Studio l'Equipe”, étudiant en informatique le soir et suivit d’un site web pour l’INRACI (Helb Ilya-Prigogine).</p>
+                    <p class="contenu_1">Développeuse Web - Back-end / mise en ligne / serveur. Esprit start-up 10-15 personnes. Toute l'équipe au même niveau et 3 managers.</p>
+                    <p class="contenu_2">UX/UI Designer et développeur web freelance - Suivi de la clientèle en full-stack. Indépendant “solo”.</p>
+                    <p class="contenu_3">Technicien vidéo chez “Studio l'Équipe”, étudiant en informatique le soir et suivit d’un site web pour l’INRACI (Helb Ilya-Prigogine).</p>
                 </div>
-                <h2 class="question">A quoi ressemble vos journées ?</h2>
+                <h2 class="question">À quoi ressemble vos journées ?</h2>
                 <div class="reponse">
-                    <p class="contenu_1">Aucune journée se ressemble, planning organisé le lundi rythmé par les e-mails urgents et les gros projets. Ce qui me plait le plus c’est d’analyser des problèmes et d’échanger pour trouver des solutions.</p class="contenu">
-                    <p class="contenu_2">Je travaille avec une vue sur le jardin, ce qui embellit ma journée. Mise en place des idées et de leurs réalisations. Ce qui me plaît le plus c’est de créer des projets. Et de se tenir informer sur l'évolution des technologies.</p>
-                    <p class="contenu_3">J’analyse les besoins à développer avec les enseignants et je fais la mise à jour du site avec les connaissances apprise petit à petit.</p>
+                    <p class="contenu_1">Aucune journée ne se ressemble, planning organisé le lundi rythmé par les e-mails urgents et les gros projets. Ce qui me plaît le plus c’est d’analyser des problèmes et d’échanger pour trouver des solutions.</p>
+                    <p class="contenu_2">Je travaille avec une vue sur le jardin, ce qui embellit ma journée. Ce qui aide la mise en place de mes idées et de leurs réalisations. Ce qui me plaît le plus c’est de créer des projets. Et de se tenir informé sur l'évolution des technologies.</p>
+                    <p class="contenu_3">J’analyse les besoins à développer avec les enseignants et je fais la mise à jour du site avec les connaissances apprises petit à petit. </p>
                 </div>
                 <h2 class="question">Quel est votre parcours ?</h2>
                 <div class="reponse">
-                    <p class="contenu_1">Petits boulots alimentaires après dans l’horeca. J’ai eu envie de changement donc j’ai suivie une formation chez “Interface 3”. Engager dans la boîte où je fais mon stage chez “Publicis Digitas” ensuite débaucher par “Shake”. Et à côté de l’autoformation pour approfondir mes connaissances.</p>
-                    <P class="contenu_2">Etude en décoration/publicité, gérant d’une agence hippique. Passionné par l’informatique. Je me forme en PAO ensuite je commence à travailler en tant que graphiste et de fil en aiguille, je réalise plusieurs sites web et emailings. Je deviens indépendant en 2004.</P>
-                    <P class="contenu_3">Etude en cinéma à l’INRACI. Peu de temps après la fin de mes études, je suis engagé chez “Studio l’Equipe”.</P>
+                    <p class="contenu_1">Je fais des petits boulots alimentaires puis travaille dans l’horeca. J’ai eu envie de changement donc j’ai suivi une formation chez “Interface 3”. Engagée dans la boîte où je fais mon stage chez “Publicis Digitas” et ensuite débauchée par “Shake”. Et à côté, je fais de l’autoformation pour approfondir mes connaissances.</p>
+                    <P class="contenu_2">Je fais mes études en décoration/publicité par la suite, je trouve un travaille en tant gérant d’une agence hippique. Passionné par l’informatique. Je me forme en PAO ensuite, je commence à travailler en tant que graphiste et de fil en aiguille, je réalise plusieurs sites web et emailings. Je deviens indépendant en 2004.</P>
+                    <P class="contenu_3">J’étudie le cinéma à l’INRACI. Peu de temps après la fin de mes études, je suis engagé chez “Studio l’Équipe”.</P>
                 </div>
                 <h2 class="question">Quels sont vos conseils ?</h2>
                 <div class="reponse">
                     <P class="contenu_1">L'indispensable : FAIRE DES PAUSES ! Prendre le temps de souffler et cibler son domaine d'expertise : back-end ou front-end.</P>
                     <P class="contenu_2">Rester à jours sur les exigences des entreprises et apprendre l’anglais.</P>
-                    <P class="contenu_3">De pratiquer le plus souvent possibles et coder proprement selon les design patterns.</P>
+                    <P class="contenu_3">Pratiquer le plus souvent possibles et coder proprement selon les design patterns.</P>
                 </div>
                 <h2 class="question">Internet comme moyen éducatif ?</h2>
                 <div class="reponse">
-                    <P class="contenu_1">Ca l’est déjà et vas prendre de plus en plus d’ampleur. C’est un outils de facilité pour l'enseignant et un support pour dynamiser ses cours.</P>
+                    <P class="contenu_1">Ça l’est déjà et va prendre de plus en plus d’ampleur. C’est un outil de facilité pour l'enseignant et un support pour dynamiser ses cours.</P>
                     <P class="contenu_2">On ne peut plus ignorer cette méthode éducative, mais cela doit rester un complément à l’apprentissage.</P>
-                    <P class="contenu_3">Oui mais pas le principal. L’avantage c’est qu’on peut avoir une expérience personnalisée mais  les informations ne sont pas toujours vérifiées.</P>
+                    <P class="contenu_3">Oui, mais pas le principal. L’avantage c’est qu’on peut avoir une expérience personnalisée, mais les informations ne sont pas toujours vérifiées.</P>
                 </div>
                 <h2 class="question">Me prendriez-vous en stage ?</h2>
                 <div class="reponse">
@@ -77,19 +77,20 @@
                     <P class="contenu_3">Cela n’est pas de mon ressort.</P>
                 </div>
                 <div class="reponse">
-                    <p class="contenu_1"><img class="tourner_page" src="img/tourner_page.png"></p>
-                    <p class="contenu_2"><img class="tourner_page" src="img/tourner_page.png"></p>
-                    <p class="contenu_3"><img class="tourner_page" src="img/tourner_page.png"></p>
+                    <p class="contenu_1"><img class="coin_page" src="img/tourner_page.png"></p>
+                    <p class="contenu_2"><img class="coin_page" src="img/tourner_page.png"></p>
+                    <p class="contenu_3"><img class="coin_page" src="img/tourner_page.png"></p>
                 </div>
                 <div class="conclusion">
                     <h1>Conclusion</h1>
-                    <p>Ces interviews m’ont apporté beaucoup de réponses et de questions. Elles m’ont confirmée que ce métier est en constante évolution et qu’on n'arrêtera jamais d’apprendre et l’idée me plaît. Par contre, il faut que je trouve mon domaine d’expertise et ca n’est pas encore le cas. Mais je ne suis qu’au début, je trouverais bien ma voie avec le temps et l'expérience. En tous cas pour le moment, j’ai soif d’apprendre : je dois me ménager, ne pas aller trop vite et bien assimiler les bases. Et surtout prendre des PAUSE ! On me confirme encore que l’anglais a sa part d’importance dans le milieu. Plus le choix, il faut que je m’y mette !</p>
-                    <p>Pour ce qu’y est du futur, je ne sais pas encore. Une personne dont j’ai fait l’interview travaille dans une agence de pub. Sachant que c’est un milieu qui évolue tout le temps, très vite et qui touche à l’art : à voir !</p>
+                    <p>Ces interviews m’ont apporté beaucoup de réponses et de questions. Elles m’ont confirmé que ce métier est en constante évolution et qu’on n'arrêtera jamais d’apprendre et l’idée me plaît. Par contre, il faut que je trouve mon domaine d’expertise et ça n’est pas encore le cas. Mais je ne suis qu’au début, je trouverai bien ma voie avec le temps et l'expérience. En tous cas, pour le moment, j’ai soif d’apprendre : je dois me ménager, ne pas aller trop vite et bien assimiler les bases. Et surtout prendre des PAUSES ! On me confirme encore que l’anglais a sa part d’importance dans le milieu. Plus le choix, il faut que je m’y mette !</p>
+                    <p>Pour ce qui est de ma formation au centre de formation 2mille (<a href="https://www.cf2m.be/" target="_blank">cf2m</a>), j’avoue, je ne m’attendais pas à ça. La philosophie d’apprentissage me plaît, j’ai eu peur de rentrer dans un système scolaire classique et c’est tout l’inverse : une formation adaptée et adulte. De plus, il y a un esprit d'entraide et d’envie d’apprendre dans la classe et tout le monde à l’air motivé, ce qui est satisfaisant pour mon épanouissement au sein de cette formation. Ce qui est sûr, c’est que je ne traîne pas les pieds pour venir en formation : j’y cours !</p>
+                    <p>Pour le futur, je ne sais pas encore. Une personne dont j’ai fait l’interview travaille dans une agence de pub; sachant que c’est un milieu qui évolue tout le temps, très vite et qui touche à l’art : à voir !</p>
                     <h1>FIN</h1>
                 </div>
             </div>
         </section>
-        <footer class="nav_bas">
+        <footer class="page_top">
             <a href="#"><img class="arrow_haut_expo" src="img/arrow_menu.png" alt="fleche bas" height="30px" width="auto"></a>
         </footer>
     </body>
