--- a/menu.html
+++ b/menu.html
@@ -7,17 +7,17 @@
         <title>Menu</title>
     </head>
     <body>
-        <a class="retour" href="index.html"><img src="img/retour.png" height="50px" width="auto"></a>
-        <a class="email" href="contact.html"><img src="img/contact.png" height="50px" width="auto"></a>
+        <a class="page_back" href="index.html"><img src="img/retour.png" height="50px" width="auto"></a>
+        <a class="next_page_contact" href="contact.html"><img src="img/contact.png" height="50px" width="auto"></a>
         <section class="page_menu">
             <a class="lien_menu" href="exposition.html">
                 <img class="img_menu" src="img/exposition.jpg" height="650px" width="auto">
-                <div class="bottom">EXPOSITION</div>
+                <div class="lien_text">EXPOSITION</div>
             </a>
             <div class="barre_horizontal"></div>
             <a class="lien_menu" href="interview.html">
                 <img class="img_menu" src="img/interview.jpg" height="650px" width="auto">
-                <div class="bottom">INTERVIEW</div>
+                <div class="lien_text">INTERVIEW</div>
             </a>
         </section>
     </body>
