--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <title>Contact</title>
     </head>
     <body class="page_contact">
-        <header class="nav">
+        <header>
             <nav class="barre_menu">
                 <ul class="menu">
                     <li class="deroulant"><a href="index.html">ACCUEIL</a>
@@ -28,10 +28,10 @@
                     <div class="satisfait">
                         <label class="satif"> Satisfait ?</label>
                             <div class="rep_satif">
-                                <label class="inline" for="#">OUI</label>
+                                <label for="#">OUI</label>
                                 <input id="oui" type="radio" name="#" value="#" />
                                 <input id="non" type="radio" name="#" value="#" />
-                                <label class="inline" for="#">NON</label>
+                                <label for="#">NON</label>
                             </div>
                     </div>
                     <div class="interessant">
