--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <article class="presentation">
                 <p class="perso">&emsp;Je serais incapable de suivre un maître aveuglement. Je passerais trop de temps à ruminer le passé. Je cacherais la nature des gens. Je serais trop souvent incompris.</p>
                 <p class="by">Adrien De Laet</p>
-                <a href="menu.html"><img class="page_next" src="img/arrow.png" alt="fleche bas"></a>
+                <a href="page/menu.html"><img class="page_next" src="img/arrow.png" alt="fleche bas"></a>
             </article>
         </section>
     </body>
